Update for to use Java 21
* update tests to run on 21
* remove deprecated uses of finalize, make DiskBackQueue and associated Autocloseable
  so that it's easier for downstream code to handle them without finalize
  Note: if this proves to be insufficient we should look into implementing a Cleaner
* remove deprecated boxing constructors new Byte() -> Byte.valueof() etc